--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "dev": "npm run dev --prefix frontend",
     "dev:pages": "npm run build --prefix frontend && wrangler pages dev frontend/dist --d1 DB=calculator-db --live-reload",
-    "dev:full": "concurrently \"npm run dev --prefix frontend\" \"wait-on http://localhost:5173 && wrangler pages dev frontend/dist --d1 DB=calculator-db --proxy http://localhost:5173\"",
+    "dev:worker": "wrangler dev --config workers/wrangler.toml",
     "build": "npm run build --prefix frontend",
     "deploy": "wrangler pages deploy frontend/dist",
-    "deploy:functions": "wrangler deploy"
+    "deploy:worker": "wrangler deploy --config workers/wrangler.toml"
   },
   "keywords": ["calculator", "cloudflare", "pages", "workers"],
   "author": "",
