--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "npm run dev --prefix frontend",
     "dev:pages": "npm run build --prefix frontend && wrangler pages dev frontend/dist --d1 DB=calculator-db --live-reload",
     "dev:worker": "wrangler dev --config workers/wrangler.toml",
-    "build": "npm run build --prefix frontend",
+    "build": "npm install --prefix frontend && npm run build --prefix frontend",
     "deploy": "wrangler pages deploy frontend/dist",
     "deploy:worker": "wrangler deploy --config workers/wrangler.toml"
   },
